added tests for customer